fix: update range

--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -72,9 +72,11 @@ spec:
           ingress:
             ingressClassName: {{ .alertmanager.ingress.ingressClassName }}
             enabled: true
-            hosts: {{ toYaml .alertmanager.ingress.hosts | nindent 14 }}
+            hosts:
+              {{- range .alertmanager.ingress.hosts }} - {{.}} {{- end }}
             tls:
-              - hosts: {{ toYaml .alertmanager.ingress.hosts |nindent 16 }}
+              - hosts: 
+                {{- range .alertmanager.ingress.hosts }} - {{.}} {{- end }}
             annotations:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
@@ -89,9 +91,11 @@ spec:
           ingress:
             ingressClassName: {{ .grafana.ingress.ingressClassName }}
             enabled: true
-            hosts: {{ toYaml .grafana.ingress.hosts | nindent 14 }}
+            hosts: 
+              {{- range .grafana.ingress.hosts }} - {{.}} {{- end }}
             tls:
-              - hosts: {{ toYaml .grafana.ingress.hosts | nindent 16 }}
+              - hosts: 
+                {{- range .grafana.ingress.hosts }} - {{.}} {{- end }}
             annotations:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
@@ -279,9 +283,11 @@ spec:
           ingress:
             ingressClassName: {{ .prometheus.ingress.ingressClassName }}
             enabled: true
-            hosts: {{ toYaml .prometheus.ingress.hosts | nindent 14 }}
+            hosts: 
+              {{- range .prometheus.ingress.hosts }} - {{.}} {{- end }}
             tls:
-              - hosts: {{ toYaml .prometheus.ingress.hosts | nindent 16 }}
+              - hosts: 
+                {{- range .prometheus.ingress.hosts }} - {{.}} {{- end }}
             annotations:
               nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
               nginx.ingress.kubernetes.io/backend-protocol: HTTP
