--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -9,8 +9,8 @@ sealedSecrets:
   name: sealed-secrets
   enabled: true
   source:
-    repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 2.5.3
+    repoURL: https://bitnami-labs.github.io/sealed-secrets
+    targetRevision: 2.17.1
     chart: sealed-secrets
     helm:
       parameters:
