fix: update operator web port

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -68,6 +68,8 @@ prometheusOperator:
 
   prometheusOperator: 
     hostNetwork: true
+    web:
+      listenAddress: ":40250"
 
   prometheusNodeExporter:
     serviceMonitor:
