--- a/charts/logging-opensearch/Chart.yaml
+++ b/charts/logging-opensearch/Chart.yaml
@@ -8,4 +8,4 @@ dependencies:
     repository: https://fluent.github.io/helm-charts
     version: 0.46.7
 appVersion: "1.2.3"
-version: 1.2.3
+version: 1.2.3-1
