--- a/charts/opensearch-cluster/values.yaml
+++ b/charts/opensearch-cluster/values.yaml
@@ -392,6 +392,8 @@ opensearch-cluster:
             - audit-*
             - container-*
             - access-*
+            - ss4o_metrics-*
+            - network-*
           allowedActions:
             - create_index
             - index
