--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,5 +29,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1
+        with:
+          args: --skip-existing
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
